# ghc-mod-nvim

./: LICENSE  README.md  ghc-mod-nvim.cabal  package.yaml  stack.yaml
Neovim/: GhcModNvim.hs
Neovim/GhcModNvim/: Plugin.hs  Types.hs  Utility.hs
Neovim/GhcModNvim/GhcMod/: Command.hs  Parser.hs
app/: Main.hs
plugin/: ghc-mod-nvim.vim
src/Neovim/: GhcModNvim.hs
src/Neovim/GhcModNvim/: Utility.hs
src/Neovim/GhcModNvim/GhcMod/: Command.hs
