name:                ghc-mod-nvim
version:             0.1.0.0
build-type:          Simple
homepage:            https://github.com/Hoegyama/ghc-mod-nvim
license-file:        LICENSE
copyright:           2017 Naoki Iwayama
cabal-version:       >=1.10

library
  ghc-options:          -O3 -Wall
  exposed-modules:      Neovim.GhcModNvim
  other-modules:        Neovim.GhcModNvim.Utility
                      , Neovim.GhcModNvim.Types
                      , Neovim.GhcModNvim.Plugin
                      , Neovim.GhcModNvim.GhcMod.Parser
                      , Neovim.GhcModNvim.GhcMod.Command
  build-depends:        base >= 4.7 && < 5
                      , nvim-hs >= 1.0.0.0
                      , nvim-hs-contrib >= 1.0.0.0
                      , mtl
                      , stm
                      , lens
                      , extra
                      , parsec
                      , process
                      , filepath
                      , exceptions
                      , bytestring
                      , basic-prelude
                      , deepseq
                      , unliftio
  default-language:     Haskell2010

